<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginScreen">

        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appColorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_chevron_left_black_24dp"/>

            <TextView
                android:id="@+id/login_head"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:background="@color/appColorPrimary"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/forgot_password"/>

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:visibility="invisible"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_chevron_left_black_24dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_below="@+id/header_layout"
            app:srcCompat="@drawable/login_background" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            android:layout_marginTop="260dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:layout_editor_absoluteX="43dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_text"
                    android:textSize="15sp"
                    android:padding="15dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@android:color/black"
                    android:gravity="center"/>


                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_email"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/black"
                    android:gravity="center"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:padding="10dp"
                    android:layout_margin="20dp"
                    android:singleLine="true"
                    android:background="@drawable/edit_text_drawable"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:background="@drawable/button_background"
            android:layout_below="@+id/card_view" />


    </RelativeLayout>

</ScrollView>